--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,54 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 18px;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  font-family: Arial, sans-serif;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  flex-direction: column;
+  background-image: radial-gradient(circle 311px at 8.6% 27.9%, rgba(62, 147, 252, 0.57) 12.9%, rgba(182, 101, 110, 0.44) 91.2%);
+  background-size: cover;
+  width: 100%;
+  height: 100vh;
+  margin: 0;
 }
 
-.App-link {
-  color: #61dafb;
+my-navbar {
+  text-align: center;
+  display: flex;
+  color: red;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  margin-bottom: 90px;
+
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+my-projects {
+  margin-bottom: 90px;
+  color: #fff;
+  text-align: center;
+  width: 100%;
+  flex: 1; 
+  display: flex;
+  justify-content: center;
+  justify-content: center; 
+  align-items: center; 
+  padding: 10px;
+}
+
+img {
+  width: 100px;
+  height: 100px;
+}
+
+my-footer {
+  width: 100%;
+  height: 60px;
 }
